--- a/spring-cloud-gateway-dependencies/pom.xml
+++ b/spring-cloud-gateway-dependencies/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>spring-cloud-gateway-dependencies</artifactId>
-	<version>3.1.0</version>
+	<version>3.1.0-osrc</version>
 	<packaging>pom</packaging>
 
 	<name>spring-cloud-gateway-dependencies</name>
